# voice-mcp-host

./: .gitignore  INSTALL.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: codeql.yml
docs/: 0.1-desktop-dictation.md  agent-roadmap.md  release.md
scripts/: build-release-windows.ps1  install-windows.ps1  prepare-faster-whisper-windows.ps1  prepare-macos-engine.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  default_config.json  macos_info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bundled/faster-whisper/: README.txt
src-tauri/bundled/whisper-macos/: README.txt
src-tauri/sidecars/: browser_readonly.mjs  voice_mcp_asr_sidecar.py
src-tauri/src/: agent.rs  agent_memory.rs  agent_prompts.rs  agent_provider.rs  agent_runtime.rs  agent_tools.rs  agent_types.rs  app_state.rs  asr.rs  audio.rs  browser.rs  commands.rs  config.rs  hotkeys.rs  insertion.rs  logging.rs  main.rs  model_store.rs  recorder.rs  todoist.rs  tray.rs  workspace.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/lib/: api.ts  types.ts
src/overlay/: OverlayPanel.tsx
src/settings/: SettingsPanel.tsx
