[package]
name = "voice-mcp-host"
version = "0.2.1"
description = "Local-first hotkey-driven dictation with optional LLM and MCP"
authors = ["Praveen Nandhi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }

# Audio capture
cpal = "0.15"

# WAV encoding for subprocess ASR
hound = "3"
# ZIP extraction for whisper-cli binary download
zip = { version = "2", default-features = false, features = ["deflate"] }

# Model download
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication"] }
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
accessibility-sys = "0.1"
